test/test_suite/errors/error_throw.c3
module foo;

optenum Blurg
{
    Z
}

fn void main()
{
    int! i = Blurg.Z!;
    int! j = Blurg.Z!;
}